--- a/index.html
+++ b/index.html
@@ -74,7 +74,13 @@
     console.log(token);
     axios.defaults.headers.common['Authorization'] = token;
     // #4  確認是否登入
-
+    axios.post(`${url}/api/user/check`)
+      .then((res)=>{
+        console.log(res.data)
+      })
+      .catch((error)=>{
+        console.dir(error);
+      })
   }
 
   getProductsBtn.addEventListener('click', getProducts)
